# knowledge-base

./: .gitignore  DESIGN.md  Makefile  README.md
data/ai-seo-coaching-calls/: modules.json
data/ai-seo-coaching-calls/lessons/: 0b72f4ca.json  1799aa24.json  17ede118.json  180d6771.json  1c9823dd.json  322fa1fb.json  3843104a.json  4ffc1bc4.json  5ab72678.json  7d4275c0.json  8fa04576.json  a2fc775d.json  be97e944.json  c170149f.json  c9ac32d6.json  cd26cd25.json  cf350e26.json  d3d085d3.json  f4cb8fba.json  f5cf630c.json  fa7b441c.json  fc63cbab.json
data/ai-seo-mastery-pro/: chunks.parquet  modules.json
data/ai-seo-mastery-pro/lessons/: 01b1a434.json  043327fc.json  0780ac81.json  0d60b2a9.json  0f0406fc.json  129d9d70.json  13ed811b.json  1535f6ca.json  16d634b1.json  17d349dd.json  1a0af25c.json  21391829.json  21dcf3ad.json  237288c0.json  237a7de6.json  266efa41.json  2787eab9.json  2bd7a999.json  2eff9321.json  3032def6.json  3063310a.json  34ca0fd3.json  35426742.json  369f7f92.json  37395b16.json  39eaa610.json  3d4cf401.json  3d4f70e5.json  4a186bb9.json  4a4eda1f.json  4d5790fa.json  57b9af58.json  (+71 more)
pipeline/: chunk_embed.py  common.py  enrich.py  pyproject.toml  transcribe.py  transcribe_sweep.py
scripts/: deploy.sh
server/: .env.prod.example  docker-compose.prod.yml
server/api/: Dockerfile  create_user.py  ingest.py  pyproject.toml  schema.sql
server/api/app/: auth.py  budget.py  config.py  db.py  embed.py  main.py  minimax.py  retrieval.py
server/nginx/: nginx.conf
server/web/: index.html  package-lock.json  package.json  vite.config.js
(+3 files in other folders)
